crates/strider-analyze/tests/snapshots/v2__ppc64be__elf_relocs__dispatch_via_table.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "7" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "5" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x10000000000018248:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x18:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x3d:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x10000000000010250:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "35" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "40" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "42" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u64\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "15" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
